// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders ListArticle component, when user is not authenticated. 1`] = `
<div>
  <div>
    <header
      className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed makeStyles-appBar-29 makeStyles-transparent-41 makeStyles-fixed-31 MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
    >
      <div
        className="MuiToolbar-root MuiToolbar-regular makeStyles-container-32 MuiToolbar-gutters"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-title-33"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              href="/"
              onClick={[Function]}
            >
              <img
                alt="logo"
                className="makeStyles-logo-28"
                src="logo-white.png"
              />
            </a>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <div
          className="makeStyles-hidden-45 PrivateHiddenCss-smDown-127"
        >
          <div
            className="makeStyles-collapse-46"
          >
            <ul
              className="MuiList-root makeStyles-list-137 makeStyles-mlAuto-153 MuiList-padding"
            >
              <li
                className="MuiListItem-root makeStyles-listItem-138 MuiListItem-gutters"
                disabled={false}
              >
                <a
                  className="makeStyles-navLink-140"
                  href="/listideas"
                  onClick={[Function]}
                >
                  Gift List Ideas
                </a>
              </li>
              <li
                className="MuiListItem-root makeStyles-listItem-138 MuiListItem-gutters"
                disabled={false}
              >
                <a
                  className="makeStyles-navLink-140"
                  href="/login"
                  onClick={[Function]}
                >
                  Log In
                </a>
              </li>
              <li
                className="MuiListItem-root makeStyles-listItem-138 MuiListItem-gutters"
                disabled={false}
              >
                <a
                  className="makeStyles-navLink-140"
                  href="/signup"
                  onClick={[Function]}
                >
                  Sign Up
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </header>
  </div>
  <div
    className="makeStyles-parallax-169 makeStyles-darkColor-173 makeStyles-articleBg-6 makeStyles-darkFilter-8"
    style={
      Object {
        "backgroundImage": "url(bathtime.jpg)",
        "transform": "translate3d(0,0px,0)",
      }
    }
  />
  <div
    className="makeStyles-main-5"
  >
    <div
      className="makeStyles-container-1"
    >
      <div
        className="makeStyles-section-2"
      >
        <div
          className="MuiGrid-root makeStyles-grid-179  MuiGrid-container MuiGrid-justify-xs-center"
        >
          <div
            className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-10 MuiGrid-grid-md-10"
          >
            <h1
              className="makeStyles-title-3"
            >
              Test title.
            </h1>
            <h3
              className="makeStyles-subtitle-4"
            >
              Test subtitle.
            </h3>
            <div
              className="makeStyles-content-7"
            >
              <div>
                <p>
                  Test content.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-section-284"
      >
        <div
          className="MuiGrid-root makeStyles-grid-179  MuiGrid-container MuiGrid-justify-xs-center"
        >
          <div
            className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-10 MuiGrid-grid-md-10"
          >
            <h3
              className="makeStyles-title-285"
            >
              Shop The Story
            </h3>
            <div
              className="MuiGrid-root makeStyles-grid-179  MuiGrid-container"
            >
              <div
                className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
              >
                <div
                  className="makeStyles-card-291 makeStyles-cardPlain-292 makeStyles-cardProduct-299"
                >
                  <div
                    className="makeStyles-cardHeader-306 makeStyles-cardHeaderImage-308 makeStyles-noShadow-309"
                  >
                    <a
                      href="https://www.johnlewis.com/john-lewis-partners-safari-hooded-towel-and-mitt-white/p3382355"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <img
                        alt=".."
                        className="makeStyles-productImage-286"
                        src="https://johnlewis.scene7.com/is/image/JohnLewis/237170008?$rsp-pdp-port-640$"
                      />
                    </a>
                  </div>
                  <div
                    className="makeStyles-cardBody-318 makeStyles-cardBodyPlain-320"
                  >
                    <a
                      href="https://www.johnlewis.com/john-lewis-partners-safari-hooded-towel-and-mitt-white/p3382355"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <h4
                        className="makeStyles-cardTitle-287"
                      >
                        John Lewis & Partners
                      </h4>
                    </a>
                    <p
                      className="makeStyles-description-288"
                    >
                      Safari Hooded Towel and Mitt, White.
                    </p>
                    <div
                      className="makeStyles-priceContainer-289"
                    >
                      <span
                        className="makeStyles-price-290"
                      >
                         
                        £16.50
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
              >
                <div
                  className="makeStyles-card-291 makeStyles-cardPlain-292 makeStyles-cardProduct-299"
                >
                  <div
                    className="makeStyles-cardHeader-306 makeStyles-cardHeaderImage-308 makeStyles-noShadow-309"
                  >
                    <a
                      href="https://www.amazon.co.uk/Aveeno-Baby-Daily-Care-Cleansing/dp/B01IW7YMDS"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <img
                        alt=".."
                        className="makeStyles-productImage-286"
                        src="https://images-na.ssl-images-amazon.com/images/I/81rlToC4wtL._SX466_.jpg"
                      />
                    </a>
                  </div>
                  <div
                    className="makeStyles-cardBody-318 makeStyles-cardBodyPlain-320"
                  >
                    <a
                      href="https://www.amazon.co.uk/Aveeno-Baby-Daily-Care-Cleansing/dp/B01IW7YMDS"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <h4
                        className="makeStyles-cardTitle-287"
                      >
                        Aveeno Baby
                      </h4>
                    </a>
                    <p
                      className="makeStyles-description-288"
                    >
                      Daily Care Cleansing Milk, 300 ml.
                    </p>
                    <div
                      className="makeStyles-priceContainer-289"
                    >
                      <span
                        className="makeStyles-price-290"
                      >
                         
                        £8.04
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <br />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="makeStyles-sectionSimilarLists-326"
  >
    <div
      className="makeStyles-container-325"
    >
      <div
        className="MuiGrid-root makeStyles-grid-179  MuiGrid-container"
      >
        <div
          className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-md-12"
        >
          <h2
            className="makeStyles-title-328 makeStyles-textCenter-327"
          >
            Similar Articles
          </h2>
          <br />
          <div
            className="MuiGrid-root makeStyles-grid-179  MuiGrid-container"
          >
            <div
              className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
            >
              <div
                className="makeStyles-card-291 makeStyles-cardBlog-294"
              >
                <div
                  className="makeStyles-cardHeader-306 makeStyles-cardHeaderImage-308"
                >
                  <a
                    href="/listideas/travelgear"
                  >
                    <img
                      alt="..."
                      className="makeStyles-listImage-332"
                      src="travelgear.jpg"
                    />
                  </a>
                  <div
                    className="makeStyles-coloredShadow-330"
                    style={
                      Object {
                        "backgroundImage": "url(travelgear.jpg)",
                        "opacity": "1",
                      }
                    }
                  />
                </div>
                <div
                  className="makeStyles-cardBody-318"
                >
                  <div
                    className="makeStyles-defaultFontStyle-333 makeStyles-infoText-340"
                  >
                    <h6>
                      TRAVEL
                    </h6>
                  </div>
                  <h4
                    className="makeStyles-cardTitle-329"
                  >
                    <a
                      href="/listideas/travelgear"
                    >
                      Travel Gear
                    </a>
                  </h4>
                  <p
                    className="makeStyles-description-331"
                  >
                    Our favourite buggies, travel cots and other gear which make travelling with your little ones hassle free.
                    <a
                      href="/listideas/travelgear"
                    >
                       Read Article 
                    </a>
                  </p>
                </div>
              </div>
            </div>
            <div
              className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
            >
              <div
                className="makeStyles-card-291 makeStyles-cardBlog-294"
              >
                <div
                  className="makeStyles-cardHeader-306 makeStyles-cardHeaderImage-308"
                >
                  <a
                    href="/listideas/hospitalbag"
                  >
                    <img
                      alt="..."
                      className="makeStyles-listImage-332"
                      src="hospitalbag.jpg"
                    />
                  </a>
                  <div
                    className="makeStyles-coloredShadow-330"
                    style={
                      Object {
                        "backgroundImage": "url(hospitalbag.jpg)",
                        "opacity": "1",
                      }
                    }
                  />
                </div>
                <div
                  className="makeStyles-cardBody-318"
                >
                  <div
                    className="makeStyles-defaultFontStyle-333 makeStyles-infoText-340"
                  >
                    <h6>
                      MATERNITY
                    </h6>
                  </div>
                  <h4
                    className="makeStyles-cardTitle-329"
                  >
                    <a
                      href="/listideas/hospitalbag"
                    >
                      Hospital Bag
                    </a>
                  </h4>
                  <p
                    className="makeStyles-description-331"
                  >
                    Make sure you're all set with everything you need for the all important hospital bag.
                    <a
                      href="/listideas/hospitalbag"
                    >
                       Read Article 
                    </a>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <footer
      className="makeStyles-footer-355 makeStyles-dark-359 makeStyles-big-356"
    >
      <div
        className="makeStyles-container-361"
      >
        <div>
          <div
            className="makeStyles-content-357"
          >
            <div
              className="MuiGrid-root makeStyles-grid-179  MuiGrid-container"
            >
              <div
                className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 MuiGrid-grid-md-8"
              >
                <h4
                  id="about"
                >
                  About Us
                </h4>
                <p>
                  Ewelists is an online gift list tool, focused on helping new and expectant parents. Our goal is simple, to make creating a gift list for your little one's special occasion, such as baby shower, first birthday or Christmas faster and easier.
                   
                </p>
                <p>
                  We started by building the tool we would want to use, but would also love to hear your ideas. If you have any suggestions please contact us!
                   
                </p>
              </div>
              <div
                className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
              >
                <h4>
                  Follow Us
                </h4>
                <ul
                  className="makeStyles-socialButtons-351"
                >
                  <li>
                    <a
                      aria-disabled={false}
                      className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-372 makeStyles-facebook-383 makeStyles-simple-394 makeStyles-justIcon-402"
                      href="https://www.facebook.com/ewelists"
                      onBlur={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      target="_blank"
                    >
                      <span
                        className="MuiButton-label"
                      >
                        <i
                          className="fab fa-facebook-square"
                        />
                      </span>
                      <span
                        className="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                  <li>
                    <a
                      aria-disabled={false}
                      className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-372 makeStyles-twitter-382 makeStyles-simple-394 makeStyles-justIcon-402"
                      href="https://twitter.com/ewelists"
                      onBlur={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      target="_blank"
                    >
                      <span
                        className="MuiButton-label"
                      >
                        <i
                          className="fab fa-twitter"
                        />
                      </span>
                      <span
                        className="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                  <li>
                    <a
                      aria-disabled={false}
                      className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-372 makeStyles-instagram-393 makeStyles-simple-394 makeStyles-justIcon-402"
                      href="https://www.instagram.com/ewelists/"
                      onBlur={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      target="_blank"
                    >
                      <span
                        className="MuiButton-label"
                      >
                        <i
                          className="fab fa-instagram"
                        />
                      </span>
                      <span
                        className="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <hr />
        </div>
        <div>
          <div
            className="makeStyles-left-349"
          >
            <ul
              className="MuiList-root makeStyles-list-348 MuiList-padding"
            >
              <li
                className="MuiListItem-root makeStyles-inlineBlock-347 MuiListItem-gutters"
                disabled={false}
              >
                <a
                  className="makeStyles-block-346"
                  href="/contact"
                >
                  Contact Us
                </a>
              </li>
              <li
                className="MuiListItem-root makeStyles-inlineBlock-347 MuiListItem-gutters"
                disabled={false}
              >
                <a
                  className="makeStyles-block-346"
                  href="/#about"
                >
                  About us
                </a>
              </li>
              <li
                className="MuiListItem-root makeStyles-inlineBlock-347 MuiListItem-gutters"
                disabled={false}
              >
                <a
                  className="makeStyles-block-346"
                  href="/privacy"
                >
                  Privacy
                </a>
              </li>
              <li
                className="MuiListItem-root makeStyles-inlineBlock-347 MuiListItem-gutters"
                disabled={false}
              >
                <a
                  className="makeStyles-block-346"
                  href="/terms"
                >
                  Terms
                </a>
              </li>
            </ul>
          </div>
          <div
            className="makeStyles-right-350"
          >
            © 
            2020
             ewelists
          </div>
        </div>
        <div
          className="makeStyles-clearFix-371"
        />
      </div>
    </footer>
  </div>
</div>
`;

exports[`Renders ListArticle component, when user who has authenticated. 1`] = `
<div>
  <div>
    <header
      className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed makeStyles-appBar-29 makeStyles-transparent-41 makeStyles-fixed-31 MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
    >
      <div
        className="MuiToolbar-root MuiToolbar-regular makeStyles-container-32 MuiToolbar-gutters"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-title-33"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              href="/"
              onClick={[Function]}
            >
              <img
                alt="logo"
                className="makeStyles-logo-28"
                src="logo-white.png"
              />
            </a>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <div
          className="makeStyles-hidden-45 PrivateHiddenCss-smDown-127"
        >
          <div
            className="makeStyles-collapse-46"
          >
            <ul
              className="MuiList-root makeStyles-list-414 makeStyles-mlAuto-430 MuiList-padding"
            >
              <li
                className="MuiListItem-root makeStyles-listItem-415 MuiListItem-gutters"
                disabled={false}
              >
                <a
                  className="makeStyles-navLink-417"
                  href="/"
                  onClick={[Function]}
                >
                  My Lists
                </a>
              </li>
              <li
                className="MuiListItem-root makeStyles-listItem-415 MuiListItem-gutters"
                disabled={false}
              >
                <a
                  className="makeStyles-navLink-417"
                  href="/listideas"
                  onClick={[Function]}
                >
                  Gift List Ideas
                </a>
              </li>
              <li
                className="MuiListItem-root makeStyles-listItem-415 MuiListItem-gutters"
                disabled={false}
              >
                <div
                  className="makeStyles-manager-433"
                >
                  <div
                    className="makeStyles-target-435"
                  >
                    <button
                      aria-haspopup="true"
                      aria-label="Notifications"
                      aria-owns={null}
                      className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-372 makeStyles-transparent-395 makeStyles-navLink-417"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      <span
                        className="MuiButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          className="MuiSvgIcon-root makeStyles-buttonIcon-449"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M0 0h20v20H0V0z"
                            fill="none"
                            transform="scale(1.2, 1.2)"
                          />
                          <path
                            d="M15.95 10.78c.03-.25.05-.51.05-.78s-.02-.53-.06-.78l1.69-1.32c.15-.12.19-.34.1-.51l-1.6-2.77c-.1-.18-.31-.24-.49-.18l-1.99.8c-.42-.32-.86-.58-1.35-.78L12 2.34c-.03-.2-.2-.34-.4-.34H8.4c-.2 0-.36.14-.39.34l-.3 2.12c-.49.2-.94.47-1.35.78l-1.99-.8c-.18-.07-.39 0-.49.18l-1.6 2.77c-.1.18-.06.39.1.51l1.69 1.32c-.04.25-.07.52-.07.78s.02.53.06.78L2.37 12.1c-.15.12-.19.34-.1.51l1.6 2.77c.1.18.31.24.49.18l1.99-.8c.42.32.86.58 1.35.78l.3 2.12c.04.2.2.34.4.34h3.2c.2 0 .37-.14.39-.34l.3-2.12c.49-.2.94-.47 1.35-.78l1.99.8c.18.07.39 0 .49-.18l1.6-2.77c.1-.18.06-.39-.1-.51l-1.67-1.32zM10 13c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"
                            transform="scale(1.2, 1.2)"
                          />
                        </svg>
                        <b
                          className="makeStyles-caret-450"
                        />
                      </span>
                      <span
                        className="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </header>
  </div>
  <div
    className="makeStyles-parallax-169 makeStyles-darkColor-173 makeStyles-articleBg-6 makeStyles-darkFilter-8"
    style={
      Object {
        "backgroundImage": "url(bathtime.jpg)",
        "transform": "translate3d(0,0px,0)",
      }
    }
  />
  <div
    className="makeStyles-main-5"
  >
    <div
      className="makeStyles-container-1"
    >
      <div
        className="makeStyles-section-2"
      >
        <div
          className="MuiGrid-root makeStyles-grid-179  MuiGrid-container MuiGrid-justify-xs-center"
        >
          <div
            className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-10 MuiGrid-grid-md-10"
          >
            <h1
              className="makeStyles-title-3"
            >
              Test title.
            </h1>
            <h3
              className="makeStyles-subtitle-4"
            >
              Test subtitle.
            </h3>
            <div
              className="makeStyles-content-7"
            >
              <div>
                <p>
                  Test content.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-section-284"
      >
        <div
          className="MuiGrid-root makeStyles-grid-179  MuiGrid-container MuiGrid-justify-xs-center"
        >
          <div
            className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-10 MuiGrid-grid-md-10"
          >
            <h3
              className="makeStyles-title-285"
            >
              Shop The Story
            </h3>
            <div
              className="MuiGrid-root makeStyles-grid-179  MuiGrid-container"
            >
              <div
                className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
              >
                <div
                  className="makeStyles-card-291 makeStyles-cardPlain-292 makeStyles-cardProduct-299"
                >
                  <div
                    className="makeStyles-cardHeader-306 makeStyles-cardHeaderImage-308 makeStyles-noShadow-309"
                  >
                    <a
                      href="https://www.johnlewis.com/john-lewis-partners-safari-hooded-towel-and-mitt-white/p3382355"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <img
                        alt=".."
                        className="makeStyles-productImage-286"
                        src="https://johnlewis.scene7.com/is/image/JohnLewis/237170008?$rsp-pdp-port-640$"
                      />
                    </a>
                  </div>
                  <div
                    className="makeStyles-cardBody-318 makeStyles-cardBodyPlain-320"
                  >
                    <a
                      href="https://www.johnlewis.com/john-lewis-partners-safari-hooded-towel-and-mitt-white/p3382355"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <h4
                        className="makeStyles-cardTitle-287"
                      >
                        John Lewis & Partners
                      </h4>
                    </a>
                    <p
                      className="makeStyles-description-288"
                    >
                      Safari Hooded Towel and Mitt, White.
                    </p>
                    <div
                      className="makeStyles-priceContainer-289"
                    >
                      <span
                        className="makeStyles-price-290"
                      >
                         
                        £16.50
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
              >
                <div
                  className="makeStyles-card-291 makeStyles-cardPlain-292 makeStyles-cardProduct-299"
                >
                  <div
                    className="makeStyles-cardHeader-306 makeStyles-cardHeaderImage-308 makeStyles-noShadow-309"
                  >
                    <a
                      href="https://www.amazon.co.uk/Aveeno-Baby-Daily-Care-Cleansing/dp/B01IW7YMDS"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <img
                        alt=".."
                        className="makeStyles-productImage-286"
                        src="https://images-na.ssl-images-amazon.com/images/I/81rlToC4wtL._SX466_.jpg"
                      />
                    </a>
                  </div>
                  <div
                    className="makeStyles-cardBody-318 makeStyles-cardBodyPlain-320"
                  >
                    <a
                      href="https://www.amazon.co.uk/Aveeno-Baby-Daily-Care-Cleansing/dp/B01IW7YMDS"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <h4
                        className="makeStyles-cardTitle-287"
                      >
                        Aveeno Baby
                      </h4>
                    </a>
                    <p
                      className="makeStyles-description-288"
                    >
                      Daily Care Cleansing Milk, 300 ml.
                    </p>
                    <div
                      className="makeStyles-priceContainer-289"
                    >
                      <span
                        className="makeStyles-price-290"
                      >
                         
                        £8.04
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <br />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="makeStyles-sectionSimilarLists-326"
  >
    <div
      className="makeStyles-container-325"
    >
      <div
        className="MuiGrid-root makeStyles-grid-179  MuiGrid-container"
      >
        <div
          className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-md-12"
        >
          <h2
            className="makeStyles-title-328 makeStyles-textCenter-327"
          >
            Similar Articles
          </h2>
          <br />
          <div
            className="MuiGrid-root makeStyles-grid-179  MuiGrid-container"
          >
            <div
              className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
            >
              <div
                className="makeStyles-card-291 makeStyles-cardBlog-294"
              >
                <div
                  className="makeStyles-cardHeader-306 makeStyles-cardHeaderImage-308"
                >
                  <a
                    href="/listideas/travelgear"
                  >
                    <img
                      alt="..."
                      className="makeStyles-listImage-332"
                      src="travelgear.jpg"
                    />
                  </a>
                  <div
                    className="makeStyles-coloredShadow-330"
                    style={
                      Object {
                        "backgroundImage": "url(travelgear.jpg)",
                        "opacity": "1",
                      }
                    }
                  />
                </div>
                <div
                  className="makeStyles-cardBody-318"
                >
                  <div
                    className="makeStyles-defaultFontStyle-333 makeStyles-infoText-340"
                  >
                    <h6>
                      TRAVEL
                    </h6>
                  </div>
                  <h4
                    className="makeStyles-cardTitle-329"
                  >
                    <a
                      href="/listideas/travelgear"
                    >
                      Travel Gear
                    </a>
                  </h4>
                  <p
                    className="makeStyles-description-331"
                  >
                    Our favourite buggies, travel cots and other gear which make travelling with your little ones hassle free.
                    <a
                      href="/listideas/travelgear"
                    >
                       Read Article 
                    </a>
                  </p>
                </div>
              </div>
            </div>
            <div
              className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
            >
              <div
                className="makeStyles-card-291 makeStyles-cardBlog-294"
              >
                <div
                  className="makeStyles-cardHeader-306 makeStyles-cardHeaderImage-308"
                >
                  <a
                    href="/listideas/hospitalbag"
                  >
                    <img
                      alt="..."
                      className="makeStyles-listImage-332"
                      src="hospitalbag.jpg"
                    />
                  </a>
                  <div
                    className="makeStyles-coloredShadow-330"
                    style={
                      Object {
                        "backgroundImage": "url(hospitalbag.jpg)",
                        "opacity": "1",
                      }
                    }
                  />
                </div>
                <div
                  className="makeStyles-cardBody-318"
                >
                  <div
                    className="makeStyles-defaultFontStyle-333 makeStyles-infoText-340"
                  >
                    <h6>
                      MATERNITY
                    </h6>
                  </div>
                  <h4
                    className="makeStyles-cardTitle-329"
                  >
                    <a
                      href="/listideas/hospitalbag"
                    >
                      Hospital Bag
                    </a>
                  </h4>
                  <p
                    className="makeStyles-description-331"
                  >
                    Make sure you're all set with everything you need for the all important hospital bag.
                    <a
                      href="/listideas/hospitalbag"
                    >
                       Read Article 
                    </a>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <footer
      className="makeStyles-footer-355 makeStyles-dark-359 makeStyles-big-356"
    >
      <div
        className="makeStyles-container-361"
      >
        <div>
          <div
            className="makeStyles-content-357"
          >
            <div
              className="MuiGrid-root makeStyles-grid-179  MuiGrid-container"
            >
              <div
                className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 MuiGrid-grid-md-8"
              >
                <h4
                  id="about"
                >
                  About Us
                </h4>
                <p>
                  Ewelists is an online gift list tool, focused on helping new and expectant parents. Our goal is simple, to make creating a gift list for your little one's special occasion, such as baby shower, first birthday or Christmas faster and easier.
                   
                </p>
                <p>
                  We started by building the tool we would want to use, but would also love to hear your ideas. If you have any suggestions please contact us!
                   
                </p>
              </div>
              <div
                className="MuiGrid-root makeStyles-grid-283  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
              >
                <h4>
                  Follow Us
                </h4>
                <ul
                  className="makeStyles-socialButtons-351"
                >
                  <li>
                    <a
                      aria-disabled={false}
                      className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-372 makeStyles-facebook-383 makeStyles-simple-394 makeStyles-justIcon-402"
                      href="https://www.facebook.com/ewelists"
                      onBlur={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      target="_blank"
                    >
                      <span
                        className="MuiButton-label"
                      >
                        <i
                          className="fab fa-facebook-square"
                        />
                      </span>
                      <span
                        className="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                  <li>
                    <a
                      aria-disabled={false}
                      className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-372 makeStyles-twitter-382 makeStyles-simple-394 makeStyles-justIcon-402"
                      href="https://twitter.com/ewelists"
                      onBlur={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      target="_blank"
                    >
                      <span
                        className="MuiButton-label"
                      >
                        <i
                          className="fab fa-twitter"
                        />
                      </span>
                      <span
                        className="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                  <li>
                    <a
                      aria-disabled={false}
                      className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-372 makeStyles-instagram-393 makeStyles-simple-394 makeStyles-justIcon-402"
                      href="https://www.instagram.com/ewelists/"
                      onBlur={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      target="_blank"
                    >
                      <span
                        className="MuiButton-label"
                      >
                        <i
                          className="fab fa-instagram"
                        />
                      </span>
                      <span
                        className="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <hr />
        </div>
        <div>
          <div
            className="makeStyles-left-349"
          >
            <ul
              className="MuiList-root makeStyles-list-348 MuiList-padding"
            >
              <li
                className="MuiListItem-root makeStyles-inlineBlock-347 MuiListItem-gutters"
                disabled={false}
              >
                <a
                  className="makeStyles-block-346"
                  href="/contact"
                >
                  Contact Us
                </a>
              </li>
              <li
                className="MuiListItem-root makeStyles-inlineBlock-347 MuiListItem-gutters"
                disabled={false}
              >
                <a
                  className="makeStyles-block-346"
                  href="/#about"
                >
                  About us
                </a>
              </li>
              <li
                className="MuiListItem-root makeStyles-inlineBlock-347 MuiListItem-gutters"
                disabled={false}
              >
                <a
                  className="makeStyles-block-346"
                  href="/privacy"
                >
                  Privacy
                </a>
              </li>
              <li
                className="MuiListItem-root makeStyles-inlineBlock-347 MuiListItem-gutters"
                disabled={false}
              >
                <a
                  className="makeStyles-block-346"
                  href="/terms"
                >
                  Terms
                </a>
              </li>
            </ul>
          </div>
          <div
            className="makeStyles-right-350"
          >
            © 
            2020
             ewelists
          </div>
        </div>
        <div
          className="makeStyles-clearFix-371"
        />
      </div>
    </footer>
  </div>
</div>
`;
